@@ -1,3 +1,0 @@
-2002-01-15  Holger Freyther <freyther@kde.org>
-	* First checkin of the interface and helper
-	  classes. All not finished.
